--- a/oehealth_idn/views/registration_view.xml
+++ b/oehealth_idn/views/registration_view.xml
@@ -90,7 +90,7 @@
                             <field name="pharmacy_order_ids" readonly="1" context="{'default_patient':patient, 'default_type': 'Emergency', 'default_payment': payment, 'default_company': company, 'default_insurance': insurance, 'default_employee_id': employee_id, 'default_payment_guarantor_discount_id': payment_guarantor_discount_id}"/>
                         </page>
                         <page string="Lab Test" attrs="{'invisible':[('registration_status','not in', ['Outpatient','Inpatient','Laboratory','Emergency'])]}">
-                            <field name="lab_test_ids" context="{'default_patient': patient, 'default_requestor': '', 'default_queue_trans_id': queue_trans_id, 'default_payment_guarantor_discount_id': payment_guarantor_discount_id}"/>
+                            <field name="lab_test_ids" context="{'default_patient': patient, 'default_requestor': '', 'default_queue_trans_id': queue_trans_id, 'default_payment': payment, 'default_company': company, 'default_insurance': insurance, 'default_employee_id': employee_id, 'default_payment_guarantor_discount_id': payment_guarantor_discount_id}"/>
                         </page>
                         <page string="Medical Support">
                             <field name="support_ids" readonly="1" context="{'default_patient':patient, 'default_type': 'Medical Support', 'default_payment': payment, 'default_company': company, 'default_insurance': insurance, 'default_employee_id': employee_id, 'default_queue_trans_id': queue_trans_id, 'default_payment_guarantor_discount_id': payment_guarantor_discount_id}"/>
